--- a/PFE-html/Teacher-home.html
+++ b/PFE-html/Teacher-home.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -56,7 +57,7 @@
               <li class="nav-item ">
                 <a class="nav-link" href="index.html">Home </a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="about.html"> About <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
@@ -69,7 +70,7 @@
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Login-form.html"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
               </li>
               
             </ul>
@@ -80,45 +81,26 @@
     <!-- end header section -->
   </div>
 
-  <!-- about section -->
-
-  <section class="about_section layout_padding">
-    <div class="container  ">
-      <div class="heading_container heading_center">
-        <h2>
-          About <span>US</span>
-        </h2>
-        <p>
-          This website is made to help all of the parties involved in the PFE process
-        </p>
-      </div>
-      <div class="row">
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="images/abtal.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <h3>
-              We Are PFE-HUB 
-            </h3>
-            <p>
-              Our platform serves as a central hub for final-year project allocation, simplifying the process for both students and academic institutions. Through a user-friendly interface, it facilitates seamless coordination, enabling students to explore project proposals and express their preferences efficiently. With features like project categorization and real-time updates, transparency and fairness are upheld in project assignment. Our commitment to optimizing the allocation process empowers students to pursue projects aligned with their interests and academic goals, fostering an environment conducive to impactful research and innovation.
-            </p>
-            <p>
-              PFE-HUB at your service 
-            </p>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-      </div>
+  <div class="about_section layout_padding">
+    <div class="prop" style="flex-direction:row">
+      <button id="navigation-button" class="but" type="submit">
+        ADD A SUBJECT
+      </button>
+      <button  id="navigation-button1" class="but" type="submit">
+        PROPOSED SUBJECTS
+      </button>
     </div>
-  </section>
 
-  <!-- end about section -->
+    <script>
+      document.getElementById("navigation-button").addEventListener("click", function() {
+          window.location.href = "subject-form.html";
+      });
+      document.getElementById("navigation-button1").addEventListener("click", function() {
+          window.location.href = "subject-prop.html";
+      });
+  </script>
+
+  </div>
 
   <!-- info section -->
 
@@ -169,7 +151,7 @@
           <div class="info_detail">
             <h4>
               INFO
-            </h4>            
+            </h4>            <div class="underline"></div>
 
             <p>
             This website is our project  for the TP web  as a team of 4:</p><p id="name"> Mayssa & Feres & Emna & Maha</p>
