--- a/PFE-html/index.html
+++ b/PFE-html/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/pic1.png" alt="">
                   </div>
                 </div>
               </div>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/abtal.jpg" alt="">
                   </div>
                 </div>
               </div>
