--- a/PFE-html/subject-form.html
+++ b/PFE-html/subject-form.html
@@ -93,21 +93,9 @@
         <div class="form-group">
           <label for="skills">Needed Skills:</label>
           <textarea rows="6" placeholder="Enter needed skills"></textarea>
-          <button  style="margin-left: 615px;margin-top: 20px; width:250px;height: 50px" class="but" type="submit">
-            ADD SUBJECT
-          </button>
+          <input type="submit" value="ADD SUBJECT " style="margin-left: 615px;margin-top: 20px; width:250px;height: 50px" class="but" type="submit">
      
-    </div>
-   <!---<select id="skills" name="skills">
-      <option value="">Select...</option>
-      <option value="html">HTML</option>
-      <option value="css">CSS</option>
-      <option value="java">Java</option>
-      <option value="c">C</option>
-      <option value="cpp">C++</option>
-  </select>---> 
-
-
+        </div>
 
   </div>
   <section class="info_section ">
