--- a/PFE-html/subject-prop.html
+++ b/PFE-html/subject-prop.html
@@ -83,7 +83,10 @@
   <div class="about_section layout_padding">
 <h1 style="text-align: center;">LIST OF SUBJECTS</h1>
 
+<p style="margin-left: 650px; margin-top: 150px;">
 
+BLASSET LES SUJETS 
+</p>
 
   </div>
 
