--- a/PFE-html/teachers-details.html
+++ b/PFE-html/teachers-details.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
@@ -43,6 +44,7 @@
       </div>
     </div>
 
+    <!-- header section strats -->
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -55,7 +57,7 @@
                 <a class="nav-link" href="index.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About </a>
+                <a class="nav-link" href="about.html"> About <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Services</a>
@@ -66,8 +68,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="Login-form.html"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
               </li>
               
             </ul>
@@ -75,58 +77,19 @@
         </nav>
       </div>
     </header>
+    <!-- end header section -->
   </div>
 
-  <div class="about_section layout_padding prop">
-    
-        <h2 id="h12" style=" border-bottom: 2px solid white ;
-        padding-bottom: 20px;"> Sign up Form   </h2>
-         <div class="form-group">
-          <label for="firstname">First Name :</label> 
-          <input type="text" id="firstname" name="firstname" placeholder="Enter your first name"  style="width:255px;height: 30px;" required>
-      </div>   
-      <div class="form-group">
-        <label for="subject">Family Name :</label> 
-        <input type="text" id="familyname" name="familyname" placeholder="Enter your family name"  style="width:255px;height: 30px;">
-    </div>
-    <div class="form-group">
-      <label for="birthdate"> Date of birth :</label> 
-      <input type="date" id="birthdate" name="birthdate" style="width:255px;height: 30px;">
-  </div>
-       <div class="form-group">
-            <label for="subject">Email :</label> 
-            <input type="email" id="subject" name="subject" placeholder="Enter your e-mail" style="width:255px;height: 30px;">
-        </div>
-        <div class="form-group">
-          <label for="subject">Numero CIN :</label> 
-          <input type="text" id="subject" name="subject" placeholder="Enter your CIN NUMBER" style="width:255px;height: 30px;">
-      </div>
-      <div class="form-group">
-        <label for="phone">Phone number:</label> 
-        <input type="text" id="phone" name="phone" placeholder="Enter your phone number"  style="width:255px;height: 30px;">
-    </div>
-      <div class="form-group">
-        <label for="subject"> Role :</label> 
-      <select id="Role" name="Role"  style="width:255px;height: 30px;">
-      <option value="" name="Role">Select...</option>
-      <option value="teacher" name="Role">Teacher</option>
-      <option value="student" name="Role">Student </option>
-      <option value="adminition-employee" name="Role">Administraion employee</option>
-      <option value="Entreprise-representative" name="Role">Entreprise-Representative </option>
-      </select>
-    </div>
-        <div class="form-group">
-            <label> Password :</label>
-            <input type="password" placeholder="Enter your password"  style="width:255px;height: 30px;">
-        </div>
-        <div class="form-group"> 
-          <a href="#">
-          <button  style="margin-left: 660px;margin-top: 20px; width: 150px ;height: 40px" class="but" type="sign up">Next
-          </button>
-        </a>
-    </div>
+  <div class="about_section">
+    <h1> attribuant des rôles,
+    en suivant leurs activités et en gérant leurs informations personnelles.
 
+
+  </h1>
   </div>
+
+  <!-- info section -->
+
   <section class="info_section ">
     <div class="container">
       <div class="row">
@@ -198,6 +161,7 @@
     </div>
   </section>
 
+  <!-- end info section -->
 
 </body>
 
