--- a/PFE-html/Teacher-home.html
+++ b/PFE-html/Teacher-home.html
@@ -86,8 +86,11 @@
       <button id="navigation-button" class="but" type="submit">
         ADD A SUBJECT
       </button>
-      <button  id="navigation-button1" class="but" type="submit">
+      <button  id="navigation-button1" class="but" type="submit" style="width: fit-content;">
         PROPOSED SUBJECTS
+      </button>
+      <button  id="navigation-button2" class="but" type="submit" style="width: fit-content;">
+        Become Head of department
       </button>
     </div>
 
