--- a/PFE-html/sign-up-teacher.html
+++ b/PFE-html/sign-up-teacher.html
@@ -80,49 +80,25 @@
   <div class="about_section layout_padding prop">
     
         <h2 id="h12" style=" border-bottom: 2px solid white ;
-        padding-bottom: 20px;"> Sign up Form   </h2>
-         <div class="form-group">
-          <label for="firstname">First Name :</label> 
-          <input type="text" id="firstname" name="firstname" placeholder="Enter your first name"  style="width:255px;height: 30px;" required>
-      </div>   
+        padding-bottom: 20px;"> Sign up Teacher  </h2>
       <div class="form-group">
-        <label for="subject">Family Name :</label> 
-        <input type="text" id="familyname" name="familyname" placeholder="Enter your family name"  style="width:255px;height: 30px;">
-    </div>
-    <div class="form-group">
-      <label for="birthdate"> Date of birth :</label> 
-      <input type="date" id="birthdate" name="birthdate" style="width:255px;height: 30px;">
-  </div>
-       <div class="form-group">
-            <label for="subject">Email :</label> 
-            <input type="email" id="subject" name="subject" placeholder="Enter your e-mail" style="width:255px;height: 30px;">
-        </div>
-        <div class="form-group">
-          <label for="subject">Numero CIN :</label> 
-          <input type="text" id="subject" name="subject" placeholder="Enter your CIN NUMBER" style="width:255px;height: 30px;">
-      </div>
-      <div class="form-group">
-        <label for="phone">Phone number:</label> 
-        <input type="text" id="phone" name="phone" placeholder="Enter your phone number"  style="width:255px;height: 30px;">
-    </div>
-      <div class="form-group">
-        <label for="subject"> Role :</label> 
-      <select id="Role" name="Role"  style="width:255px;height: 30px;">
-      <option value="" name="Role">Select...</option>
-      <option value="teacher" name="Role">Teacher</option>
-      <option value="student" name="Role">Student </option>
-      <option value="adminition-employee" name="Role">Administraion employee</option>
-      <option value="Entreprise-representative" name="Role">Entreprise-Representative </option>
+        <label for="department"> Department :</label> 
+      <select id="department" name="department"  style="width:255px;height: 30px;">
+      <option value="" name="department">Select...</option>
+      <option value="GLSI" name="department">GLSI</option>
+      <option value="GTR" name="department"> GTR </option>
+      <option value="GEII" name="department">GEII</option>
+      <option value="MA" name="department">MA </option>
       </select>
     </div>
         <div class="form-group">
-            <label> Password :</label>
+            <label> Confirm Password :</label>
             <input type="password" placeholder="Enter your password"  style="width:255px;height: 30px;">
         </div>
         <div class="form-group"> 
           <a href="#">
-          <button  style="margin-left: 660px;margin-top: 20px; width: 150px ;height: 40px" class="but" type="sign up">Next
-          </button>
+            <input type="submit" style="margin-left: 660px;margin-top: 20px; width: 160px ;height: 40px" class="but" type="sign up">
+      
         </a>
     </div>
 
