--- a/PFE-html/account.html
+++ b/PFE-html/account.html
@@ -21,7 +21,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet" />
 
   <link href="css/style.css" rel="stylesheet" />
-  
+
 
 </head>
 
@@ -34,7 +34,6 @@
       
       </div>
     </div>
-
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -57,7 +56,7 @@
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User </a>
+                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
               </li>
               
             </ul>
@@ -65,19 +64,15 @@
         </nav>
       </div>
     </header>
-   
   </div>
 
-  <div class="about_section layout_padding">
-<h1 style="text-align: center;">LIST OF SUBJECTS</h1>
-
-<p style="margin-left: 650px; margin-top: 150px;">
-
-BLASSET LES SUJETS 
-</p>
-
+  <div class="acc_section" style="background-color:#00204a ;">
+<h1 style="color: white;"> Account details : </h1>
+<button  id="button1" class="but" type="submit" style="width: fit-content; margin-left: 600px;margin-bottom: 300px;" >
+  Modify Password 
+</button> 
+<p> more shit </p>
   </div>
-
 
   <section class="info_section ">
     <div class="container">
@@ -141,16 +136,14 @@ BLASSET LES SUJETS
 
           <form action="#">
             <input type="text" placeholder="Enter question" />
-            <button type="submit">
+            <a href="modify-pass.html"> <button type="submit">
               SUBMIT
-            </button>
+            </button></a>
           </form>
         </div>
       </div>
     </div>
   </section>
-
-
 </body>
 
 </html>
