--- a/PFE-html/chef-home.html
+++ b/PFE-html/chef-home.html
@@ -3,36 +3,19 @@
 
 <head>
   
-  <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/logo.png" type="">
-
   <title> PFE-HUB</title>
-
-  <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-  <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
-  <!--owl slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
-  <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
-
-  <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
-
 </head>
 
 <body class="sub_page">
@@ -44,8 +27,6 @@
       
       </div>
     </div>
-
-    <!-- header section strats -->
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -63,14 +44,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Services</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="why.html">Why Us</a>
-              </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
+                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
               </li>
               
             </ul>
@@ -78,12 +57,11 @@
         </nav>
       </div>
     </header>
-    <!-- end header section -->
   </div>
 
   <div class="about_section layout_padding">
     <div class="prop" style="flex-direction:row">
-      <button id="navigation-button" class="but" type="submit">
+      <button id="navigation-button" class="but" type="submit" style="width: fit-content;">
         Manage Teachers 
       </button>
       <button  id="navigation-button1" class="but" type="submit" style="width: fit-content;">
@@ -113,9 +91,6 @@
   </script>
 
   </div>
-
-  <!-- info section -->
-
   <section class="info_section ">
     <div class="container">
       <div class="row">
@@ -186,9 +161,6 @@
       </div>
     </div>
   </section>
-
-  <!-- end info section -->
-
 </body>
 
 </html>
