--- a/PFE-html/Administration-home.html
+++ b/PFE-html/Administration-home.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -21,7 +22,6 @@
   <link href="css/font-awesome.min.css" rel="stylesheet" />
 
   <link href="css/style.css" rel="stylesheet" />
-  
 
 </head>
 
@@ -52,12 +52,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Services</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User </a>
+                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
               </li>
               
             </ul>
@@ -65,20 +64,40 @@
         </nav>
       </div>
     </header>
-   
   </div>
 
   <div class="about_section layout_padding">
-<h1 style="text-align: center;">LIST OF SUBJECTS</h1>
+    <div class="prop" style="flex-direction:row">
+      <button id="navigation-button" class="but" type="submit" style="width: fit-content;">
+        Manage Students 
+      </button>
+      <button  id="navigation-button1" class="but" type="submit" style="width: fit-content;">
+        Project assignments tracking
+      </button>
+      <button  id="navigation-button2" class="but" type="submit" style="width: fit-content;">
+        Planning Tracking
+      </button>
+      <button  id="navigation-button3" class="but" type="submit" style="width: fit-content;">
+        Logistics Management 
+      </button>
+    </div>
 
-<p style="margin-left: 650px; margin-top: 150px;">
-
-BLASSET LES SUJETS 
-</p>
+    <script>
+      document.getElementById("navigation-button").addEventListener("click", function() {
+          window.location.href = "students-details.html";
+      });
+      document.getElementById("navigation-button1").addEventListener("click", function() {
+          window.location.href = "project.html";
+      });
+      document.getElementById("navigation-button2").addEventListener("click", function() {
+          window.location.href = "plan.html";
+      });
+      document.getElementById("navigation-button3").addEventListener("click", function() {
+          window.location.href = "logistics.html";
+      });
+  </script>
 
   </div>
-
-
   <section class="info_section ">
     <div class="container">
       <div class="row">
@@ -149,8 +168,6 @@ BLASSET LES SUJETS
       </div>
     </div>
   </section>
-
-
 </body>
 
 </html>
