--- a/PFE-html/Entreprise-home.html
+++ b/PFE-html/Entreprise-home.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -9,19 +10,14 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/logo.png" type="">
-
   <title> PFE-HUB</title>
-
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
+  
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
   <link href="css/font-awesome.min.css" rel="stylesheet" />
 
   <link href="css/style.css" rel="stylesheet" />
-  
 
 </head>
 
@@ -34,7 +30,6 @@
       
       </div>
     </div>
-
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -57,7 +52,7 @@
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User </a>
+                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
               </li>
               
             </ul>
@@ -65,20 +60,34 @@
         </nav>
       </div>
     </header>
-   
   </div>
 
   <div class="about_section layout_padding">
-<h1 style="text-align: center;">LIST OF SUBJECTS</h1>
+    <div class="prop" style="flex-direction:row">
+      <button id="navigation-button" class="but" type="submit" style="width: fit-content;">
+        Add subject
+      </button>
+      <button  id="navigation-button1" class="but" type="submit" style="width: fit-content;">
+       Subject Supervision
+      </button>
+      <button  id="navigation-button2" class="but" type="submit" style="width: fit-content;">
+        Participate in presentations 
+      </button>
+    </div>
 
-<p style="margin-left: 650px; margin-top: 150px;">
-
-BLASSET LES SUJETS 
-</p>
+    <script>
+      document.getElementById("navigation-button").addEventListener("click", function() {
+          window.location.href = "subject-form.html";
+      });
+      document.getElementById("navigation-button1").addEventListener("click", function() {
+          window.location.href = "subject.html";
+      });
+      document.getElementById("navigation-button2").addEventListener("click", function() {
+          window.location.href = "plan.html";
+      });
+  </script>
 
   </div>
-
-
   <section class="info_section ">
     <div class="container">
       <div class="row">
@@ -149,7 +158,6 @@ BLASSET LES SUJETS
       </div>
     </div>
   </section>
-
 
 </body>
 
