--- a/PFE-html/Teacher-home.html
+++ b/PFE-html/Teacher-home.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  
-  <!-- Basic -->
+ 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
+  
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
@@ -16,23 +15,15 @@
 
   <title> PFE-HUB</title>
 
-  <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-  <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
-  <!--owl slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
-  <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
 
-  <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
-
 </head>
 
 <body class="sub_page">
@@ -45,7 +36,7 @@
       </div>
     </div>
 
-    <!-- header section strats -->
+    
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -63,14 +54,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Services</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="why.html">Why Us</a>
-              </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
+                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
               </li>
               
             </ul>
@@ -78,16 +67,16 @@
         </nav>
       </div>
     </header>
-    <!-- end header section -->
+
   </div>
 
   <div class="about_section layout_padding">
     <div class="prop" style="flex-direction:row">
-      <button id="navigation-button" class="but" type="submit">
-        ADD A SUBJECT
+      <button id="navigation-button" class="but" type="submit" style="width: fit-content;">
+        Add A Subject
       </button>
       <button  id="navigation-button1" class="but" type="submit" style="width: fit-content;">
-        PROPOSED SUBJECTS
+        Proposed Subjects 
       </button>
       <button  id="navigation-button2" class="but" type="submit" style="width: fit-content;">
         Become Head of department
@@ -105,7 +94,6 @@
 
   </div>
 
-  <!-- info section -->
 
   <section class="info_section ">
     <div class="container">
@@ -178,7 +166,6 @@
     </div>
   </section>
 
-  <!-- end info section -->
 
 </body>
 
