--- a/PFE-html/plan.html
+++ b/PFE-html/plan.html
@@ -2,12 +2,9 @@
 <html>
 
 <head>
-  <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
@@ -15,23 +12,16 @@
 
   <title> PFE-HUB</title>
 
-  <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-  <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
-  <!--owl slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
-  <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
 
-  <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
-
+  
 </head>
 
 <body class="sub_page">
@@ -44,7 +34,6 @@
       </div>
     </div>
 
-    <!-- header section strats -->
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -62,14 +51,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Services</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="why.html">Why Us</a>
-              </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
               </li>
               
             </ul>
@@ -77,7 +64,6 @@
         </nav>
       </div>
     </header>
-    <!-- end header section -->
   </div>
 
   <div class="about_section">
@@ -86,9 +72,6 @@
 
 
   </div>
-
-  <!-- info section -->
-
   <section class="info_section ">
     <div class="container">
       <div class="row">
@@ -160,7 +143,6 @@
     </div>
   </section>
 
-  <!-- end info section -->
 
 </body>
 
