--- a/PFE-html/account.html
+++ b/PFE-html/account.html
@@ -67,11 +67,11 @@
   </div>
 
   <div class="acc_section" style="background-color:#00204a ;">
-<h1 style="color: white;"> Account details : </h1>
-<button  id="button1" class="but" type="submit" style="width: fit-content; margin-left: 600px;margin-bottom: 300px;" >
+<legend style="color: white; margin-left: 150px;"> Account details : </legend>
+<button  id="button1" class="but" type="submit" style="width: fit-content; margin-left: 600px;margin-bottom: 300px; margin-top: 300px;" >
   Modify Password 
 </button> 
-<p> more shit </p>
+<p> more stuff </p>
   </div>
 
   <section class="info_section ">
