--- a/PFE-html/team.html
+++ b/PFE-html/team.html
@@ -165,47 +165,45 @@
       </div>
     </div>
   </section>
-
-  <section class="info_section layout_padding2">
+  <section class="info_section ">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 info_col">
           <div class="info_contact">
             <h4>
-              Address
+              CONTACT
             </h4>
+            <div class="underline"></div>
+
             <div class="contact_link_box">
-              <a href="">
+              <a href="https://www.google.com/maps/place/Institut+Supérieur+d'Informatique+(ISI)/@36.8613747,10.1698541,15z/data=!4m10!1m2!2m1!1sisi!3m6!1s0x12e2cb4b0ecda8a3:0xc561ba5428c31de3!8m2!3d36.8613747!4d10.1889085!15sCgNpc2mSAQdjb2xsZWdl4AEA!16s%2Fg%2F120z_1jq?entry=ttu">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  Ariana
                 </span>
               </a>
-              <a href="">
+                <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                +216 23855556
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  PFE-HUB@gmail.com
                 </span>
               </a>
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/ISIgeeks">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
+            <a href="https://www.linkedin.com/company/higher-institute-of-computer-science-isi/">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/geeks.isi/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -213,57 +211,30 @@
         <div class="col-md-6 col-lg-3 info_col">
           <div class="info_detail">
             <h4>
-              Info
-            </h4>
+              INFO
+            </h4>            
+
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
-            </p>
+            This website is our project  for the TP web  as a team of 4:</p><p id="name"> Mayssa & Feres & Emna & Maha</p>
+            
           </div>
         </div>
-        <div class="col-md-6 col-lg-2 mx-auto info_col">
-          <div class="info_link_box">
-            <h4>
-              Links
-            </h4>
-            <div class="info_links">
-              <a class="active" href="index.html">
-                Home
-              </a>
-              <a class="" href="about.html">
-                About
-              </a>
-              <a class="" href="service.html">
-                Services
-              </a>
-              <a class="" href="why.html">
-                Why Us
-              </a>
-              <a class="" href="team.html">
-                Team
-              </a>
-            </div>
-          </div>
-        </div>
+        
         <div class="col-md-6 col-lg-3 info_col ">
           <h4>
-            Subscribe
-          </h4>
+            SEND A QUESTION
+          </h4>            <div class="underline"></div>
+
           <form action="#">
-            <input type="text" placeholder="Enter email" />
+            <input type="text" placeholder="Enter question" />
             <button type="submit">
-              Subscribe
+              SUBMIT
             </button>
           </form>
         </div>
       </div>
     </div>
   </section>
-
-  <section class="footer_section">
-    <div class="container">
-    </div>
-  </section>
- 
 
 
 </body>
