--- a/PFE-html/Student-home.html
+++ b/PFE-html/Student-home.html
@@ -73,9 +73,7 @@
         <button id="navigation-button" class="but" type="submit" style="width: fit-content;">
           Consult Subjects 
         </button>
-        <button  id="navigation-button1" class="but" type="submit" style="width: fit-content;">
-          Selected Subjects 
-        </button>
+      
         <button  id="navigation-button2" class="but" type="submit" style="width: fit-content;">
           Follow-up on subject applications
         </button>
@@ -85,11 +83,9 @@
       </div>
       <script>
         document.getElementById("navigation-button").addEventListener("click", function() {
-            window.location.href = "subject.html";
+            window.location.href = "subject-prop.php";
         });
-        document.getElementById("navigation-button1").addEventListener("click", function() {
-            window.location.href = "selected-subjects.html";
-        });
+       
         document.getElementById("navigation-button2").addEventListener("click", function() {
             window.location.href = "myproject.html";
         });
