--- a/PFE-html/head-dep.html
+++ b/PFE-html/head-dep.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="team.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="account.html"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
+                <a class="nav-link" href="teacherPage.html"> <i class="fa fa-user" aria-hidden="true"></i> User</a>
               </li>
               
             </ul>
