--- a/PFE-html/sign-up.html
+++ b/PFE-html/sign-up.html
@@ -68,25 +68,25 @@
   </div>
 
   <div class="about_section layout_padding prop">
-    
+    <form action="php/signup.php" method="post">
         <h2 id="h12" style=" border-bottom: 2px solid white ;
         padding-bottom: 20px;"> Sign up Form   </h2>
          <div class="form-group">
           <label for="firstname">First Name :</label> 
-          <input type="text" id="firstname" name="firstname" placeholder="Enter your first name"  style="width:255px;height: 30px;" required>
+          <input type="text" id="firstname" name="name" placeholder="Enter your first name"  style="width:255px;height: 30px;" required>
       </div>   
       <div class="form-group">
         <label for="subject">Family Name :</label> 
-        <input type="text" id="familyname" name="familyname" placeholder="Enter your family name"  style="width:255px;height: 30px;">
+        <input type="text" id="familyname" name="last_name" placeholder="Enter your family name"  style="width:255px;height: 30px;">
     </div>
   
        <div class="form-group">
             <label for="subject">Email :</label> 
-            <input type="email" id="subject" name="subject" placeholder="Enter your e-mail" style="width:255px;height: 30px;">
+            <input type="email" id="subject" name="email" placeholder="Enter your e-mail" style="width:255px;height: 30px;">
         </div>
         <div class="form-group">
           <label for="subject">Numero CIN :</label> 
-          <input type="text" id="subject" name="subject" placeholder="Enter your CIN NUMBER" style="width:255px;height: 30px;">
+          <input type="text" id="subject" name="cin" placeholder="Enter your CIN NUMBER" style="width:255px;height: 30px;">
       </div>
       <div class="form-group">
         <label for="subject"> Role :</label> 
@@ -100,15 +100,15 @@
     </div>
         <div class="form-group">
             <label> Password :</label>
-            <input type="password" placeholder="Enter your password"  style="width:255px;height: 30px;">
+            <input type="password" placeholder="Enter your password" name="password" style="width:255px;height: 30px;">
         </div>
         <div class="form-group"> 
           <a href="#">
-          <button  style="margin-left: 660px;margin-top: 20px; width: 150px ;height: 40px" class="but" type="sign up">Next
+          <button  name="submit" style="margin-left: 660px;margin-top: 20px; width: 150px ;height: 40px" class="but" type="submit">Next
           </button>
         </a>
     </div>
-
+    </form>
   </div>
   <section class="info_section ">
     <div class="container">
